--- a/containment/roles/luigi/files/luigi.conf
+++ b/containment/roles/luigi/files/luigi.conf
@@ -1,9 +1,9 @@
 [program:luigi]
-directory=/var/opt/luigi
-command=luigid --port 8990 --state-path /var/opt/luigi/luigi.pickle --logdir /var/opt/luigi
-redirect_stderr=true
-autostart=true
-startsecs=1
-startretries=10
-autorestart=unexpected
-exitcodes=0,2
+directory = /var/opt/luigi
+command = luigid --port 8990 --state-path /var/opt/luigi/luigi.pickle --logdir /var/opt/luigi
+redirect_stderr = true
+autostart = true
+startsecs = 1
+startretries = 10
+autorestart = unexpected
+exitcodes = 0,2
