--- a/containment/images/supervisor/Dockerfile
+++ b/containment/images/supervisor/Dockerfile
@@ -5,4 +5,4 @@ COPY roles/supervisor /context/roles/supervisor
 COPY roles/clean /context/roles/clean
 RUN ROLES="supervisor clean" /context/util/playbook.sh && rm -rf /context
 EXPOSE 9001
-CMD supervisord
+CMD supervisord -c /etc/supervisor/supervisord.conf
