--- a/containment/roles/luigi/files/luigi.conf
+++ b/containment/roles/luigi/files/luigi.conf
@@ -1,6 +1,6 @@
 [program:luigi]
 directory = /var/opt/luigi
-command = luigid --port 8990 --state-path /var/opt/luigi/luigi.pickle --logdir /var/opt/luigi
+command = /usr/local/bin/luigid --port 8990 --state-path /var/opt/luigi/luigi.pickle --logdir /var/opt/luigi
 redirect_stderr = true
 autostart = true
 startsecs = 1
