--- a/containment/roles/supervisor/files/supervisord.conf
+++ b/containment/roles/supervisor/files/supervisord.conf
@@ -3,7 +3,7 @@ directory = /var/opt/supervisor
 nodaemon = true
 
 [inet_http_server]
-port = *:9001
+port = 0.0.0.0:9001
 
 [include]
 files = programs/*.conf
