--- a/containment/roles/interactive/tasks.yml
+++ b/containment/roles/interactive/tasks.yml
@@ -6,6 +6,7 @@
         name: "{{ item }}"
         state: present
       with_items:
+        - findutils
         - less
         - man-db
         - procps
