support ansible vars

--- a/containment/collection.yml
+++ b/containment/collection.yml
@@ -21,11 +21,14 @@ images:
     roles:
       - hardened
 
-  lynis:
+  lynis-exp:
     extends: hardened
     roles:
       - interactive
       - lynis
+    vars:
+      lynis:
+        dummy: hi
 
   buildenv:
     extends: base
